fixed spacing in checkout

--- a/P02 Project/css/main.css
+++ b/P02 Project/css/main.css
@@ -418,6 +418,9 @@ tr:hover {background-color: #f7f7f7;}
 
   justify-content: space-between;
   padding-bottom: 1em;
+  
+  
+  
 }
 
 .product-form-row-total{
@@ -438,7 +441,15 @@ tr:hover {background-color: #f7f7f7;}
   display: flex;
   flex-direction: column;
 
+
   margin: 0 1.5em;
+}
+
+.product-form-column-2 {
+  display: flex;
+  flex-direction: column;
+  margin-left:1.8em;
+  
 }
 
 .order-quantity-container {
